--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Chango&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/stars.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/stars.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -95,7 +95,7 @@
         <a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by freepik - www.freepik.com</a>
         <p class="copyright mt-3 mb-2">&copy; <span></span> <a href="/">Garrick Crouch</a><br>All Rights Reserved</p>
     </footer>
-    <script type="module" src="../js/app.js"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 
 </html>
