--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@
         </section>
     </main>
     <footer>
-        <a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by freepik - www.freepik.com</a>
+        <p><a href="https://codepen.io/SWBennett06/pen/bLEjJR" target="_blank">Scroll Spy Intersection Observer</a> - Codepen <a href="https://codepen.io/SWBennett06" target="_blank">@SWBennett06</a></p>
+        <p><a href="https://codepen.io/maxxheth/pen/oVYRdm" target="_blank">Smooth Scroll JS</a> - Codepen <a href="https://codepen.io/maxxheth" target="_blank">@maxxheth</a></p>
+        <p><a href="https://codepen.io/saransh/pen/BKJun" target="_blank">Parallax Star Background</a> - Codepen <a href="https://codepen.io/saransh">@saransh</a></p>
+        <p><a href="https://www.sitepoint.com/community/t/count-up-script-from-a-given-date/39460">JavaScript Count-Up</a> - Sitepoint <a href="https://www.sitepoint.com/community/u/Sicho" target="_blank">Sicho</a></p>
+        <p><a href="https://www.freepik.com/free-photos-vectors/background" target="_blank">Background vector created by freepik - www.freepik.com</a></p>
         <p class="copyright mt-3 mb-2">&copy; <span></span> <a href="/">Garrick Crouch</a><br>All Rights Reserved</p>
     </footer>
     <script type="module" src="js/app.js"></script>
